force-app/main/default/objects/ContactPointPhone/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Enhanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>