force-app/main/default/objects/ContactPointPhone/fields/PrimaryKey__c.field-meta.xml
<CustomField>
    <fullName>PrimaryKey__c</fullName>
    <externalId>true</externalId>
    <label>Primary Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>