force-app/main/default/objects/ContactPointPhone/fields/Undelivered__c.field-meta.xml
<CustomField>
    <fullName>Undelivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Undelivered</label>
    <type>Checkbox</type>
</CustomField>