force-app/main/default/objects/ContactPointPhone/fields/Undelivered_Count__c.field-meta.xml
<CustomField>
    <fullName>Undelivered_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Undelivered Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>