force-app/main/default/objects/ContactPointPhone/fields/Undelivered_Latest_Time__c.field-meta.xml
<CustomField>
    <fullName>Undelivered_Latest_Time__c</fullName>
    <label>Undelivered Latest Time</label>
    <type>DateTime</type>
</CustomField>